add unit test and integration parametrized test for OfferService